--- a/UploadFile.html
+++ b/UploadFile.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./uploadFile.js"></script>
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -14,10 +17,10 @@
             <h1>Object Detection</h1>
         </div>
         <div class="container">
-            <form id="upload-form">
+            <form class="container" id="upload-form">
                 <input type="file" name="image" id="imagefile"/>
                 <br>
-                <input type="submit" value="Detectar objetos"/>
+                <input class="button" type="submit" value="Detectar objetos"/>
             </form>
         </div>
     </div>
